# SbatchMan

./: .gitignore  Cargo.toml  README.md  design document.md  diesel.toml  install.sh
.github/workflows/: ci.yml  release.yml  tests.yml
migrations/2025-10-02-085147-0000_create_db/: down.sql  up.sql
src/: cli.rs  core.rs  main.rs  tui.rs
src/api/database/: mod.rs
src/cli/: mod.rs  utils.rs
src/core/: cluster_configs.rs  config.rs  database.rs  jobs.rs  mod.rs  parsers.rs  sbatchman_config.rs  sbatchman_configs.rs  storage.rs
src/core/config/: mod.rs  tests.rs
src/core/database/: mod.rs  models.rs  schema.patch  schema.rs  tests.rs
src/core/jobs/: local.rs  pbs.rs  slurm.rs  utils.rs  variable_substitutions.rs  variables.rs  virtual.rs
src/core/jobs/tests/: local.rs  mod.rs  variable_substitutions.rs  variables.rs
src/core/parsers/: cluster_configs.rs  configs.rs  includes.rs  jobs.rs  mod.rs  utils.rs  variables.rs
src/core/parsers/tests/: mod.rs
src/core/parsers/tests/files/: circular1.yaml  circular2.yaml  circular3.yaml  circular4.yaml  clusters_configs.yaml  include_empty.yaml  include_missing_file.yaml  include_number.yaml  jobs.yaml  no_include.yaml  recursive_vars.yaml  special_types.yaml  variables.yaml
src/core/parsers/tests/files/subdir/: more_variables.yaml
src/core/sbatchman_config/: tests.rs
src/core/sbatchman_configs/tests/: mod.rs
src/core/storage/: mod.rs  models.rs
src/core/tests/: mod.rs
src/core/tests/files/: clusters_configs.yaml  variables.yaml
src/import_export/: export.rs  import.rs
src/tui/: examples.rs
