[package]
name = "sbatchman"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel_migrations = "2.3.0"
clap = { version = "4.5.48", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"]}
