[package]
name = "sbatchman"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
serde_json = "1.0"
diesel_migrations = "2.3.0"
clap = { version = "4.5.48", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"]}
dirs = "6.0.0"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"
confy = "1.0.0"
saphyr = "0.0.6"
serde = { version = "1.0.228", features = ["derive"] }
hashlink = "0.10.0"

[dev-dependencies]
tempfile = "3.23.0"
